# cherry-dl

./: BITACORA.md  LICENSE  README.md  TASKS.md  config.toml.example  diag2.py  pyproject.toml  requirements.txt  run.sh
.claude/: settings.json  settings.local.json
.tools/: env  env.fish
cherry_dl/: __init__.py  __main__.py  catalog.py  cli.py  config.py  engine.py  hasher.py  index.py  organizer.py  profiles.py
cherry_dl/auth/: __init__.py  patreon.py  pixiv.py
cherry_dl/gui/: __init__.py  app.py  bridge.py  native_dialog.py  theme.py
cherry_dl/gui/views/: artist_detail_view.py  new_profile_wizard.py  profiles_view.py  settings_view.py
cherry_dl/templates/: __init__.py  _registry.py  base.py  kemono.py  patreon.py  pixiv.py
cherry_dl/tui/: __init__.py  app.py  theme.tcss
tests/: test_ext_groups.py
