[project]
name = "cherry-dl"
version = "0.1.0"
description = "Mass downloader modular con catálogo inteligente"
requires-python = ">=3.10"
dependencies = [
    "httpx[http2]>=0.27.0",
    "aiosqlite>=0.20.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "pydantic>=2.7.0",
    "tomli>=2.0.0; python_version < '3.11'",
    "tenacity>=8.3.0",
    "PySide6>=6.7.0",
    "qasync>=0.23.0",
    "textual>=0.70.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = []
